# DeepGenimi

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/clients/: __init__.py  base_client.py  deepseek_client.py  gemini_client.py
app/deepgenimi/: __init__.py  deepgenimi.py
app/utils/: auth.py  logger.py
